PIVOT-806, Fixed summary table first column text alignment.

--- a/src/main/resources/static/css/summary.css
+++ b/src/main/resources/static/css/summary.css
@@ -216,6 +216,10 @@
 
     }
 
+    .presentation.table tbody tr th:nth-child(1) {
+      text-align: left;
+    }
+
     .presentation td[hl-level="1"],
     .presentation th[hl-level="1"]
     {
